frappe/public/less/desk.less
/* ... */
.note-editor.note-frame .note-editing-area .note-editable {
	color: @text-color;
}

.c3 svg {
	font-family: inherit;
	font-size: 10px;
	color: @text-color;
}

.c3-line {
    stroke-width: 3px;
}

.c3-tooltip {
  box-shadow: 3px 3px 3px rgba(0,0,0,0.1);
  border-radius: 3px;
  opacity: 1;
}

.c3-tooltip tr {
  border: none;
}

.c3-tooltip th {
	color: @text-muted;
	background-color: #ffffff;
	font-size: 12px;
	font-weight: normal;
	padding: 2px 5px;
	text-align: left;
	border: 1px solid @border-color;
}

.c3-tooltip td {
	color: @text-color;
	font-size: 11px;
	padding: 3px 6px;
	background-color: #fff;
	border: 1px solid @border-color;
}

.c3-tooltip td > span {
  display: inline-block;
  width: 10px;
  height: 10px;
  margin-right: 6px;
}

.c3-tooltip td.value {
  text-align: right; }

// custom font awesome checkbox
input[type="checkbox"] {
	visibility: hidden;
	position: relative;

	&:before {
		position: absolute;
		font-family: 'FontAwesome';
		content: '\f096';
		visibility: visible;
		font-style: normal;
		font-weight: normal;
		font-variant: normal;
		text-transform: none;
		line-height: 14px;
		display: inline-block;
		font-size: 14px;
		color: @text-extra-muted;
		.transition(150ms color);
	}

	&:checked:before {
		content: '\f14a';
		font-size: 13px;
		color: @checkbox-color;
	}
}
// mozilla doesn't support
// pseudo elements on checkbox
@-moz-document url-prefix() {
	input[type="checkbox"] {
		visibility: visible;
	}
}

